Major updates in the templates.

--- a/frontbackmatter/bibliography.bib
+++ b/frontbackmatter/bibliography.bib
@@ -48,3 +48,30 @@ year = {2007}
 	title = {{An Introduction to Boundary Layer Meteorology}},
 	year = {1988}
 }
+
+@article{Lilly1992,
+	author = {Lilly, D. K.},
+	doi = {10.1063/1.858280},
+	issn = {08998213},
+	journal = {Physics of Fluids A: Fluid Dynamics},
+	number = {3},
+	pages = {633},
+	title = {{A proposed modification of the Germano subgrid-scale closure method}},
+	url = {http://scitation.aip.org/content/aip/journal/pofa/4/3/10.1063/1.858280},
+	volume = {4},
+	year = {1992}
+}
+
+@article{Smagorinsky1963,
+	author = {Smagorinsky, J.},
+	doi = {10.1126/science.27.693.594},
+	isbn = {1520-0493},
+	issn = {0036-8075},
+	journal = {Monthly Weather Review},
+	number = {3},
+	pages = {99--164},
+	pmid = {17754781},
+	title = {{General circulation experiments wiht the primitive equations I. The basic experiment}},
+	volume = {91},
+	year = {1963}
+}
