Litlle bugfix in preamble.sty (thanks Marc). Add an example on how to use acronyms. Add an example of a floating table.

--- a/style/preamble.sty
+++ b/style/preamble.sty
@@ -70,7 +70,7 @@ marginparwidth=3cm,
 \usepackage{subcaption}
 
 % table
-\usepackage{slashbox}
+\usepackage{style/slashbox}
 \usepackage{rotating}
 \usepackage{multirow}
 
